--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-react-component-library",
+  "name": "@ml61/template-react-component-library-test",
   "version": "0.0.1",
   "description": "A simple template for a custom React component library",
   "scripts": {
@@ -23,5 +23,8 @@
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/ml61"
+  }
 }
